--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "twitter-api-v2": "^1.11.3"
   }
